styles(bracket): Add z-index to round to fix absolute positioniong bug in customizer

--- a/app/modules/modules.css
+++ b/app/modules/modules.css
@@ -324,6 +324,7 @@ html {
 		left: 50%;
 		margin-left: -13vw;
 		width: 26vw;
+		z-index: 4;
 	}
 
 	& .matchups {
